# Egg-Registry

./: CMakeLists.txt  README.md  egg-registry.cmake.in  egg-registry.pc.in
documentation/: ToDo
include/: CMakeLists.txt
include/egg/registry/: instance.hpp  value.hpp  version.hpp
source/: CMakeLists.txt  instance.cpp  value.cpp  version.cpp.in
test/: CMakeLists.txt  t01.cpp
